Nav overflow fix on IE11

--- a/src/styles/parts/header.scss
+++ b/src/styles/parts/header.scss
@@ -182,7 +182,7 @@ header {
 				display: block;
 				margin-right: 1rem;
 				padding-bottom: 0;
-				overflow: initial;
+				overflow: visible;
 				width: auto;
 				height: auto;
 			}
